fixed spacing between header and subheader and finished styling Dpage except for animations

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
 .header {
   font-family: arial;
   margin-top: 4.25vw;
-  margin-bottom: 10vw;
+  margin-bottom: 3vw;
 }
 
 .header > a {
